Update software citations

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -1008,7 +1008,7 @@ XY-resolution and 1µm Z-resolution of four different angles every one
 minute. For the Zeiss microscope, we attached the embryos with the
 dorsal side down onto coverslips using heptane glue and immersing in
 halocarbon oil. We cauterized the embryos sequentially using a near
-infrared 800 nm laser (Chameleon Vision II) through a single pixel line
+infrared 800nm laser (Chameleon Vision II) through a single pixel line
 (210nm/px and 100µs/px) around the same dorsal region to block the germ
 band extension. We used a Zeiss 25x/0.8NA LD LCI Plan-Apochromat
 glycerol immersion objective to acquire every 2:38min two different
@@ -1041,7 +1041,7 @@ disk, an EMCCD camera (Andor iXon DU-888), and the software AndorIQ for
 image acquisition. We attached dechorionated embryos laterally to a
 MatTek glass-bottom petri dish and covered the samples with water, and
 performed the ablations using a Titanium Sapphire Chameleon Ultra II
-(Coherent) laser at 800 nm tuned down from 80 MHz to 20 kHz with a
+(Coherent) laser at 800nm tuned down from 80MHz to 20kHz with a
 pulse-picker. The laser power measured before the microscope port was 6
 mW and the pixel dwell time for scanning was 2µs.
 <!--TODO: What is the brand of the objective?--> To ensure the cut, we
@@ -1089,22 +1089,25 @@ brightness<span class="citation" data-cites="Schmied2020-ip"><sup><a
 href="#ref-Schmied2020-ip" role="doc-biblioref">38</a></sup></span>. We
 created illustrations and assembled the final figure plates using
 Inkscape v1.2.2<span class="citation"
-data-cites="The_Inkscape_Project2022-ht"><sup><a
-href="#ref-The_Inkscape_Project2022-ht"
+data-cites="The_Inkscape_Project2003-ht"><sup><a
+href="#ref-The_Inkscape_Project2003-ht"
 role="doc-biblioref">39</a></sup></span>. For microscopy videos, we
 exported the original stacks as AVI without compression with 10–15fps
 using Fiji and post-processed them to MPEG-4 format 1080p resolution
 using the H.264 encoding at a constant bitrate quality factor of 18 for
-visualization using HandBrake. All data wrangling, statistical analyses,
-and plotting performed in R v4.2.1<span class="citation"
-data-cites="R_Core_Team2022-ki"><sup><a href="#ref-R_Core_Team2022-ki"
-role="doc-biblioref">40</a></sup></span> using RStudio
-v2022.7.2.576<span class="citation"
-data-cites="RStudio_Team2022-wr"><sup><a href="#ref-RStudio_Team2022-wr"
-role="doc-biblioref">41</a></sup></span>, and Python 3.10.7 using
+visualization using HandBrake v1.6.1<span class="citation"
+data-cites="HandBrake_Team2003-fq"><sup><a
+href="#ref-HandBrake_Team2003-fq"
+role="doc-biblioref">40</a></sup></span>. All data wrangling,
+statistical analyses, and plotting performed in R v4.2.1<span
+class="citation" data-cites="R_Core_Team1993-ki"><sup><a
+href="#ref-R_Core_Team1993-ki" role="doc-biblioref">41</a></sup></span>
+using RStudio v2022.7.2.576<span class="citation"
+data-cites="RStudio_Team2011-wr"><sup><a href="#ref-RStudio_Team2011-wr"
+role="doc-biblioref">42</a></sup></span>, and Python 3.10.7 using
 Jupyter notebooks<span class="citation"
 data-cites="Granger2021-zg"><sup><a href="#ref-Granger2021-zg"
-role="doc-biblioref">42</a></sup></span>. All data, scripts, notebooks,
+role="doc-biblioref">43</a></sup></span>. All data, scripts, notebooks,
 and analyses pipelines are available in the repository<span
 class="citation" data-cites="Vellutini2023-hg"><sup><a
 href="#ref-Vellutini2023-hg"
@@ -1422,34 +1425,42 @@ href="https://doi.org/10.12688/f1000research.27140.2">Effective image
 visualization for publications - a workflow using open access tools and
 concepts</a>. <em>F1000Res.</em> <strong>9</strong>, 1373 (2020).</div>
 </div>
-<div id="ref-The_Inkscape_Project2022-ht" class="csl-entry"
+<div id="ref-The_Inkscape_Project2003-ht" class="csl-entry"
 role="doc-biblioentry">
 <div class="csl-left-margin">39. </div><div class="csl-right-inline">The
 Inkscape Project. <a href="https://inkscape.org">Inkscape: Open source
-scalable vector graphics editor</a>. (2022).</div>
+scalable vector graphics editor</a>. (2003).</div>
 </div>
-<div id="ref-R_Core_Team2022-ki" class="csl-entry"
+<div id="ref-HandBrake_Team2003-fq" class="csl-entry"
 role="doc-biblioentry">
-<div class="csl-left-margin">40. </div><div class="csl-right-inline">R
+<div class="csl-left-margin">40. </div><div
+class="csl-right-inline">HandBrake Team. <a
+href="https://github.com/HandBrake/HandBrake"><span>HandBrake</span>:
+<span class="nocase">HandBrake’s</span> main development repository</a>.
+(2003).</div>
+</div>
+<div id="ref-R_Core_Team1993-ki" class="csl-entry"
+role="doc-biblioentry">
+<div class="csl-left-margin">41. </div><div class="csl-right-inline">R
 Core Team. <a href="http://www.r-project.org">R: A language and
-environment for statistical computing</a>. (2022).</div>
+environment for statistical computing</a>. (1993).</div>
 </div>
-<div id="ref-RStudio_Team2022-wr" class="csl-entry"
+<div id="ref-RStudio_Team2011-wr" class="csl-entry"
 role="doc-biblioentry">
-<div class="csl-left-margin">41. </div><div
+<div class="csl-left-margin">42. </div><div
 class="csl-right-inline">RStudio Team. <a
 href="http://www.rstudio.com/"><span>RStudio</span>: Integrated
-development environment for <span>R</span></a>. (2022).</div>
+development environment for <span>R</span></a>. (2011).</div>
 </div>
 <div id="ref-Granger2021-zg" class="csl-entry" role="doc-biblioentry">
-<div class="csl-left-margin">42. </div><div
+<div class="csl-left-margin">43. </div><div
 class="csl-right-inline">Granger, B. E. &amp; Perez, F. <a
 href="https://doi.org/10.1109/mcse.2021.3059263">Jupyter: Thinking and
 storytelling with code and data</a>. <em>Comput. Sci. Eng.</em>
 <strong>23</strong>, 7–14 (2021).</div>
 </div>
 <div id="ref-Ashburner2005-ym" class="csl-entry" role="doc-biblioentry">
-<div class="csl-left-margin">43. </div><div
+<div class="csl-left-margin">44. </div><div
 class="csl-right-inline">Ashburner, M., Golic, K. G. &amp; Hawley, R. S.
 <em><a
 href="https://www.worldcat.org/title/drosophila-a-laboratory-handbook/oclc/56324270"><em><span>D</span>rosophila</em>:
@@ -1458,7 +1469,7 @@ A laboratory handbook</a></em>. (Cold Spring Harbor Laboratory Press,
 </div>
 <div id="ref-Campos-Ortega1985-ma" class="csl-entry"
 role="doc-biblioentry">
-<div class="csl-left-margin">44. </div><div
+<div class="csl-left-margin">45. </div><div
 class="csl-right-inline">Campos-Ortega, J. A. &amp; Hartenstein, V.
 <em>The embryonic development of <em><span>D</span>rosophila
 melanogaster</em>:</em> (Springer Berlin Heidelberg, 1985). doi:<a
@@ -1466,7 +1477,7 @@ href="https://doi.org/10.1007/978-3-662-02454-6">10.1007/978-3-662-02454-6</a>.<
 </div>
 <div id="ref-Jimenez-Guri2014-zs" class="csl-entry"
 role="doc-biblioentry">
-<div class="csl-left-margin">45. </div><div
+<div class="csl-left-margin">46. </div><div
 class="csl-right-inline">Jiménez-Guri, E., Wotton, K. R., Gavilán, B.
 &amp; Jaeger, J. <a
 href="https://doi.org/10.1371/journal.pone.0084422">A staging scheme for
@@ -1475,7 +1486,7 @@ albipunctata</em></a>. <em>PLoS One</em> <strong>9</strong>, e84422
 (2014).</div>
 </div>
 <div id="ref-Caroti2015-cy" class="csl-entry" role="doc-biblioentry">
-<div class="csl-left-margin">46. </div><div
+<div class="csl-left-margin">47. </div><div
 class="csl-right-inline">Caroti, F., Urbansky, S., Wosch, M. &amp;
 Lemke, S. <a href="https://doi.org/10.1007/s00427-015-0504-5">Germ line
 transformation and in vivo labeling of nuclei in <span>D</span>iptera:
@@ -1485,7 +1496,7 @@ and <em><span>C</span>hironomus riparius</em>
 <strong>225</strong>, 179–186 (2015).</div>
 </div>
 <div id="ref-Wotton2014-fr" class="csl-entry" role="doc-biblioentry">
-<div class="csl-left-margin">47. </div><div
+<div class="csl-left-margin">48. </div><div
 class="csl-right-inline">Wotton, K. R., Jiménez-Guri, E., García Matheu,
 B. &amp; Jaeger, J. <a
 href="https://doi.org/10.1371/journal.pone.0084421">A staging scheme for
@@ -1500,12 +1511,12 @@ abdita</em></a>. <em>PLoS One</em> <strong>9</strong>, e84421
 <div id="fig:ectopic" class="fignos">
 <figure>
 <img src="figures/Fig1.jpg" style="width:100.0%"
-alt="Figure 1: Formation of ectopic folds in cephalic furrow mutants. a, Overview of key developmental events using a standard developmental staging43. The formation of the cephalic furrow is delayed in prd mutants and absent in btd and eve mutants. In the latter, ectopic folds form near the canonical invagination site of the cephalic furrow. Wildtype and prd embryos form less frequent and smaller ectopic folds more anterior or posterior to the cephalic furrow. Ectopic folds appear later and unfold quicker than the cephalic furrow, and their formation coincides with the appearance of mitotic domains and with the rapid phase of the germ band extension44. b, Profile view of wildtype and prd embryos (early stage 8), and btd and eve embryos (late stage 8) showing the divergent morphology of the cephalic furrow and ectopic folds, respectively. c, Lateral view of sibling controls (heterozygotes) and mutant embryos (btd or eve homozygotes). The arrows indicate epithelial folds, the asterisks indicate the position of mitotic domains, and the percentages indicate the extent of germ band extension relative to the egg length. d, Timing of formation of cephalic furrow and ectopic folds in different genetic backgrounds. The cephalic furrow forms about seven minutes after gastrulation in wildtype and btd heterozygotes, and is delayed in eve and prd heterozygotes. Ectopic folds form after 20 min post gastrulation in all genotypes. One dot represents one embryo.  e, Percentage of germ band extension at the time of formation of the cephalic furrow and ectopic folds in different genetic backgrounds. The cephalic furrow appears at 10% germ band extension, except in prd heterozygotes where it varies up to 40%. Ectopic folds form at 30–35% germ band extension. f, Variability in the distribution of the cephalic furrow in sibling controls (btd heterozygotes) and of the ectopic folds in btd mutants.  g, Folded area in a representative btd mutant and sibling control visualized in a cartographic projection of the surface of the embryo. h, Quantification of the total folded area of epithelial surface in cephalic furrow mutants." />
+alt="Figure 1: Formation of ectopic folds in cephalic furrow mutants. a, Overview of key developmental events using a standard developmental staging44. The formation of the cephalic furrow is delayed in prd mutants and absent in btd and eve mutants. In the latter, ectopic folds form near the canonical invagination site of the cephalic furrow. Wildtype and prd embryos form less frequent and smaller ectopic folds more anterior or posterior to the cephalic furrow. Ectopic folds appear later and unfold quicker than the cephalic furrow, and their formation coincides with the appearance of mitotic domains and with the rapid phase of the germ band extension45. b, Profile view of wildtype and prd embryos (early stage 8), and btd and eve embryos (late stage 8) showing the divergent morphology of the cephalic furrow and ectopic folds, respectively. c, Lateral view of sibling controls (heterozygotes) and mutant embryos (btd or eve homozygotes). The arrows indicate epithelial folds, the asterisks indicate the position of mitotic domains, and the percentages indicate the extent of germ band extension relative to the egg length. d, Timing of formation of cephalic furrow and ectopic folds in different genetic backgrounds. The cephalic furrow forms about seven minutes after gastrulation in wildtype and btd heterozygotes, and is delayed in eve and prd heterozygotes. Ectopic folds form after 20 min post gastrulation in all genotypes. One dot represents one embryo.  e, Percentage of germ band extension at the time of formation of the cephalic furrow and ectopic folds in different genetic backgrounds. The cephalic furrow appears at 10% germ band extension, except in prd heterozygotes where it varies up to 40%. Ectopic folds form at 30–35% germ band extension. f, Variability in the distribution of the cephalic furrow in sibling controls (btd heterozygotes) and of the ectopic folds in btd mutants.  g, Folded area in a representative btd mutant and sibling control visualized in a cartographic projection of the surface of the embryo. h, Quantification of the total folded area of epithelial surface in cephalic furrow mutants." />
 <figcaption aria-hidden="true"><span>Figure 1:</span> Formation of
 ectopic folds in cephalic furrow mutants. <strong>a</strong>, Overview
 of key developmental events using a standard developmental staging<span
 class="citation" data-cites="Ashburner2005-ym"><sup><a
-href="#ref-Ashburner2005-ym" role="doc-biblioref">43</a></sup></span>.
+href="#ref-Ashburner2005-ym" role="doc-biblioref">44</a></sup></span>.
 The formation of the cephalic furrow is delayed in <em>prd</em> mutants
 and absent in <em>btd</em> and <em>eve</em> mutants. In the latter,
 ectopic folds form near the canonical invagination site of the cephalic
@@ -1516,7 +1527,7 @@ their formation coincides with the appearance of mitotic domains and
 with the rapid phase of the germ band extension<span class="citation"
 data-cites="Campos-Ortega1985-ma"><sup><a
 href="#ref-Campos-Ortega1985-ma"
-role="doc-biblioref">44</a></sup></span>. <strong>b</strong>, Profile
+role="doc-biblioref">45</a></sup></span>. <strong>b</strong>, Profile
 view of wildtype and <em>prd</em> embryos (early stage 8), and
 <em>btd</em> and <em>eve</em> embryos (late stage 8) showing the
 divergent morphology of the cephalic furrow and ectopic folds,
@@ -1690,7 +1701,7 @@ experiments.</figcaption>
 <div id="fig:summary" class="fignos">
 <figure>
 <img src="figures/Fig5.jpg" style="width:50.0%"
-alt="Figure 5: Mechanical role of the cephalic furrow in development and evolution. a, Schematic drawings of a lateral view comparing wildtype and cephalic furrow mutants. Tissue flows are represented by vermilion arrows, mitotic domains by gray circles, and the folded area by sky blue. In cephalic furrow mutants the excess of epithelial tissue on the surface combined with the formation of mitotic domains and germ band extension leads to mechanical instabilities at the head–trunk boundary. b, Schematic drawings of a profile view comparing the changes in epithelial thickness in cephalic furrow mutants and the correlation with the position of tissue buckling. c, Simplified dipteran phylogenetic tree with mapped traits. The germ band extension and mitotic domains probably evolved at the base of dipteran flies. The cephalic furrow is a late innovation. It is absent in Clogmia45 and Chironomus46, and present in the common ancestor of Megaselia47 and Drosophila. It is unclear whether mechanical stresses are present in the head–trunk boundary of flies without cephalic furrow. d, Scenario for the evolution of the cephalic furrow. In the ancestral state there was no mechanical instability at the head–trunk boundary. With the evolution of the long germ and mitotic domains there was an increase in the compressive stresses at the head–trunk boundary. Selection for faster developmental times put the region under increased strain leading to the genetic stabilization of a pre-patterned head invagination that buffers these mechanical forces and probably bring a selective advantage to flies with a cephalic furrow." />
+alt="Figure 5: Mechanical role of the cephalic furrow in development and evolution. a, Schematic drawings of a lateral view comparing wildtype and cephalic furrow mutants. Tissue flows are represented by vermilion arrows, mitotic domains by gray circles, and the folded area by sky blue. In cephalic furrow mutants the excess of epithelial tissue on the surface combined with the formation of mitotic domains and germ band extension leads to mechanical instabilities at the head–trunk boundary. b, Schematic drawings of a profile view comparing the changes in epithelial thickness in cephalic furrow mutants and the correlation with the position of tissue buckling. c, Simplified dipteran phylogenetic tree with mapped traits. The germ band extension and mitotic domains probably evolved at the base of dipteran flies. The cephalic furrow is a late innovation. It is absent in Clogmia46 and Chironomus47, and present in the common ancestor of Megaselia48 and Drosophila. It is unclear whether mechanical stresses are present in the head–trunk boundary of flies without cephalic furrow. d, Scenario for the evolution of the cephalic furrow. In the ancestral state there was no mechanical instability at the head–trunk boundary. With the evolution of the long germ and mitotic domains there was an increase in the compressive stresses at the head–trunk boundary. Selection for faster developmental times put the region under increased strain leading to the genetic stabilization of a pre-patterned head invagination that buffers these mechanical forces and probably bring a selective advantage to flies with a cephalic furrow." />
 <figcaption aria-hidden="true"><span>Figure 5:</span> Mechanical role of
 the cephalic furrow in development and evolution. <strong>a</strong>,
 Schematic drawings of a lateral view comparing wildtype and cephalic
@@ -1707,12 +1718,12 @@ extension and mitotic domains probably evolved at the base of dipteran
 flies. The cephalic furrow is a late innovation. It is absent in
 <em>Clogmia</em><span class="citation"
 data-cites="Jimenez-Guri2014-zs"><sup><a href="#ref-Jimenez-Guri2014-zs"
-role="doc-biblioref">45</a></sup></span> and <em>Chironomus</em><span
+role="doc-biblioref">46</a></sup></span> and <em>Chironomus</em><span
 class="citation" data-cites="Caroti2015-cy"><sup><a
-href="#ref-Caroti2015-cy" role="doc-biblioref">46</a></sup></span>, and
+href="#ref-Caroti2015-cy" role="doc-biblioref">47</a></sup></span>, and
 present in the common ancestor of <em>Megaselia</em><span
 class="citation" data-cites="Wotton2014-fr"><sup><a
-href="#ref-Wotton2014-fr" role="doc-biblioref">47</a></sup></span> and
+href="#ref-Wotton2014-fr" role="doc-biblioref">48</a></sup></span> and
 <em>Drosophila</em>. It is unclear whether mechanical stresses are
 present in the head–trunk boundary of flies without cephalic furrow.
 <strong>d</strong>, Scenario for the evolution of the cephalic furrow.
