Update manuscript with bending energy peak

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -508,12 +508,23 @@ intrinsic negative curvature predisposing the particles to invaginate
 (Figure <a href="#fig:model">3</a>b). The germ band in our model is
 defined by the position of the posterior-most particle which is fixed at
 different percentages of egg length for each simulation (Figure <a
-href="#fig:model">3</a>b). To run the simulations we added a ground
-level of random noise, and iterated the model towards an equilibrium in
-the total energy of the system, using the peak of bending energy as a
-reference point for the initial phase of the folding (Figure <a
-href="#fig:model">3</a>d).
-<!--TODO:PT: “as a reference point for the initial phase of the folding” I don’t understand this.--></p>
+href="#fig:model">3</a>b). Finally, to run the simulations we added a
+ground level of random noise, and iterated the model towards an
+equilibrium in the total energy of the system.</p>
+<p>We first characterized the general properties of the model. In
+simulations where folds begin to form, the bending energy increases
+releasing a larger amount of stretching energy which in turn makes the
+total energy of the system decrease over the iterations (Figure <a
+href="#fig:model">3</a>d). The increase in bending energy coincides with
+a rapid deepening of the fold. Once the bending energy reaches a peak,
+the fold continues to deepen, though more gradually, but the number of
+folds stabilizes and there are rarely changes in the overall folding
+patterns (Figure <a href="#fig:model">3</a>d). Since folding events are
+stochastic and can happen at different iterations across different
+simulations, and because we are mainly interested in analyzing the
+initial position and dynamics of the folding, we used the peak of
+bending energy as the reference point to compare and analyze the
+simulation results.</p>
 <!--TODO: Define L (semi-major axis), g (germ band push), s (embryo length)-->
 <p>To obtain realistic values where the model matches experimental
 observations, we performed a sweep across the bending rigidity parameter
