--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -1122,11 +1122,13 @@ Burkon and Pavel Mejstrik for technical support. Jan Brugués and Keisuke
 Ishihara for the laser ablation setup, the MPI-CBG Light Microscopy
 Facility for imaging support, and Sven Ssykor and Cornelia Maas for help
 with fly stocks. Steffen Lemke and Yu-Chiun Wang for cephalic furrow
-discussions. Juliana Roscito for text revisions. Michael Akam for
-drawing BCV’s attention to the cephalic furrow. AS was supported by an
-EU FET Open Horizon 2020 (XXX) granted to CDM. BCV was supported by an
-EMBO Long Term Fellowship (ALTF 74-2018), and by an European Research
-Council grant (ERC-AdG 885504 GHOSTINTHESHELL) awarded to PT.</p>
+discussions. Michael Akam for drawing BCV’s attention to the cephalic
+furrow. Juliana Roscito for text revisions. AS was supported by funding
+from the European Union’s Horizon 2020 Research and Innovation Programme
+under grant agreement no. 829010 (PRIME). BCV was supported by an EMBO
+Long Term Fellowship (ALTF 74-2018), and by an European Research Council
+Advanced Grant (ERC-AdG 885504 GHOSTINTHESHELL) awarded to PT.</p>
+<!--TODO: Ask about MBC, AK, and CDM funding-->
 <h1 id="author-contributions">Author contributions</h1>
 <p>BCV and PT conceived the study. BCV designed the experiments,
 generated the fly stocks, performed the live imaging and image
