Re-write transition to ectopic folding quest

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -277,7 +277,6 @@ therefore, a puzzling structure; it is a prominent fold forming at a
 crucial stage of development, has a finely regulated morphogenesis
 driven by active cellular mechanisms, but vanishes without any obvious
 function for the embryo.</p>
-<!--TODO: the mechanisms controlling the formation of the cephalic furrow remain poorly understood [@Gilmour2017-um]-->
 <p>This ephemeral nature and absence of associated fates suggests the
 cephalic furrow may play a more immediate, physical role during
 gastrulation. Some hypotheses are that the invagination functions as a
@@ -295,8 +294,9 @@ class="citation" data-cites="Stern2021-zv"><sup><a
 href="#ref-Stern2021-zv" role="doc-biblioref">13</a></sup></span>), but
 what function such storage accomplishes remains unclear, and these
 hypotheses have not been investigated <em>in vivo</em>.</p>
-<!--TODO: But the interactions of the cephalic furrow with other morphogenetic movements have not been investigated *in vivo* [@Kong2017-ac].-->
-<!--TODO: Current models for the cephalic furrow account for the mechanics of the invagination [@Eritano2020-mi; @Jeffery2023; @OlderModel], but not the global context of how it interacts with neighbouring tissues during gastrulation.-->
+<!--The mechanisms controlling the formation of the cephalic furrow remain poorly understood [@Gilmour2017-um]-->
+<!--But the interactions of the cephalic furrow with other morphogenetic movements have not been investigated *in vivo* [@Kong2017-ac].-->
+<!--Current models for the cephalic furrow account for the mechanics of the invagination [@Eritano2020-mi; @Jeffery2023; @OlderModel], but not the global context of how it interacts with neighbouring tissues during gastrulation.-->
 <p>Our work investigates the physical consequences of perturbing the
 formation of the cephalic furrow in <em>Drosophila</em>. To comprehend
 the impact of cephalic furrow defects, we generated fluorescent lines
@@ -334,46 +334,42 @@ epithelium of some embryos (Figure <a href="#fig:initiator">S1</a>a,b,
 <a href="#fig:vid-initiator">Video S1</a>). In contrast, <em>eve</em>
 mutants show neither apical constriction nor cell shortening and the
 epithelium remains flat until about ten minutes after gastrulation
-(Figure <a href="#fig:initiator">S1</a>a,b). These differences may be
-associated with apical myosin activity which is present in <em>btd</em>
-but not in <em>eve</em> mutants<span class="citation"
-data-cites="Eritano2020-mi"><sup><a href="#ref-Eritano2020-mi"
-role="doc-biblioref">8</a></sup></span>. Overall, while the behavior of
-initiator cells is perturbed in the three mutants, the cellular basis
-for cephalic furrow formation—cell shortening—is only severely disrupted
-in <em>btd</em> and <em>eve</em> mutants.</p>
-<p>Interestingly, their head epithelium still folds in the subsequent
-minutes of gastrulation (Figure <a href="#fig:initiator">S1</a>a). The
-formation of a late fold was first observed in <em>eve</em> mutants<span
-class="citation" data-cites="Vincent1997-fa"><sup><a
+(Figure <a href="#fig:initiator">S1</a>a,b). While the behavior of
+initiator cells is perturbed in the three mutants, it is only in
+<em>btd</em> and <em>eve</em> that the cellular basis for cephalic
+furrow formation—the cell shortening—is severely disrupted. Strikingly,
+about 10–15 min after the onset of gastrulation, these mutants form a
+notable epithelial fold near the canonical position of cephalic furrow
+formation (Figure <a href="#fig:initiator">S1</a>a). Intrigued by this
+puzzling phenotype, we asked whether the formation of this late fold is
+a direct consequence of the absence of the cephalic furrow.</p>
+<!--These differences may be associated with apical myosin activity which is present in *btd* but not in *eve* mutants [@Eritano2020-mi].-->
+<!--TODO: Create video for prd initiator cells {!@fig:vid-initiator-prd}-->
+<!--TODO: Create video for btd initiator cells {!@fig:vid-initiator-btd}-->
+<p>The appearance of a late fold was first noted in <em>eve</em>
+mutants<span class="citation" data-cites="Vincent1997-fa"><sup><a
 href="#ref-Vincent1997-fa" role="doc-biblioref">7</a></sup></span>, and
-more recently in <em>btd</em> mutants<span class="citation"
-data-cites="Eritano2020-mi"><sup><a href="#ref-Eritano2020-mi"
-role="doc-biblioref">8</a></sup></span>, but the mechanisms driving its
-formation have not been identified. Intrigued by this puzzling
-phenotype, we asked whether this folding is a direct physical
-consequence linked to the absence of the cephalic furrow.</p>
-<!--TODO:PT: This is a crucial observation, motivating the entire paper. It is a bit hidden here. I would consider strengthening this transition. But I see that you want to put the emphasis on the analysis of this phenomenon not claim its discovery. That’s why I leave this to you.-->
-<!--TODO: Re-write ending, possibly in a new paragraph, to emphasize the EFs. Put more weight on the discovery aspect, not of the EFs themselves, but as a direct consequence of the absence of the CF, as well as for the investigation of the underlying mechanisms for their formation.-->
-<!--TODO: {!@fig:vid-initiator-prd}-->
-<!--TODO: {!@fig:vid-initiator-btd}-->
-<p>Our recordings show that in all embryos where the cephalic furrow
-fails to initiate, ectopic folds appear near the canonical site of
-cephalic furrow invagination (Figure <a href="#fig:ectopic">1</a>a,b,c,
-<a href="#fig:vid-lateral-btd">Video 1</a>, <a
-href="#fig:vid-lateral-eve">Video 2</a>). They appear 15 min after the
-cephalic furrow would have formed, when the germ band is extended to
-around 35% of the egg length (Figure <a href="#fig:ectopic">1</a>a,c,d,
-Table <a href="#tbl:gbtime">1</a>). They then disappear in about 20 min,
-faster than the cephalic furrow in wild type. Ectopic folds have a wider
-and often asymmetric cleft, and lack wedge-shaped initiators and other
-stereotypic cell morphologies present in the cephalic furrow<span
-class="citation" data-cites="Spencer2015-td"><sup><a
-href="#ref-Spencer2015-td" role="doc-biblioref">6</a></sup></span>
-(Figure <a href="#fig:ectopic">1</a>b, <a
-href="#fig:vid-profile-btd">Video 3</a>, <a
-href="#fig:vid-profile-eve">Video 4</a>). The position of ectopic folds
-also varies between individual mutant embryos.
+was only more recently observed in <em>btd</em> mutants<span
+class="citation" data-cites="Eritano2020-mi"><sup><a
+href="#ref-Eritano2020-mi" role="doc-biblioref">8</a></sup></span>.
+However, their significance and the mechanisms driving their formation
+have remained unclear. Our recordings show that in all embryos where the
+cephalic furrow fails to initiate, ectopic folds appear near the
+canonical site of cephalic furrow invagination (Figure <a
+href="#fig:ectopic">1</a>a,b,c, <a href="#fig:vid-lateral-btd">Video
+1</a>, <a href="#fig:vid-lateral-eve">Video 2</a>). They appear 15 min
+after the cephalic furrow would have formed, when the germ band is
+extended to around 35% of the egg length (Figure <a
+href="#fig:ectopic">1</a>a,c,d, Table <a href="#tbl:gbtime">1</a>). They
+then disappear in about 20 min, faster than the cephalic furrow in wild
+type. Ectopic folds have a wider and often asymmetric cleft, and lack
+wedge-shaped initiators and other stereotypic cell morphologies present
+in the cephalic furrow<span class="citation"
+data-cites="Spencer2015-td"><sup><a href="#ref-Spencer2015-td"
+role="doc-biblioref">6</a></sup></span> (Figure <a
+href="#fig:ectopic">1</a>b, <a href="#fig:vid-profile-btd">Video 3</a>,
+<a href="#fig:vid-profile-eve">Video 4</a>). The position of ectopic
+folds also varies between individual mutant embryos.
 <!--TODO:AB: Quantify variability of ectopic folds (a bit more than fig 1f)-->
 They can form anterior, posterior, or near the site of cephalic furrow
 formation (Figure <a href="#fig:ectopic">1</a>f, Figure <a
@@ -1120,14 +1116,15 @@ initial help with cartographic projections, Giulia Serafini for help
 with fly crosses, Anaïs Bailles for constructive feedback, and Michaela
 Burkon and Pavel Mejstrik for technical support. Jan Brugués and Keisuke
 Ishihara for the laser ablation setup, the MPI-CBG Light Microscopy
-Facility for imaging support, and Sven Ssykor and Cornelia Maas for help
-with fly stocks. Steffen Lemke and Yu-Chiun Wang for cephalic furrow
-discussions. Michael Akam for drawing BCV’s attention to the cephalic
-furrow. Juliana Roscito for text revisions. AS was supported by funding
-from the European Union’s Horizon 2020 Research and Innovation Programme
-under grant agreement no. 829010 (PRIME). BCV was supported by an EMBO
-Long Term Fellowship (ALTF 74-2018), and by an European Research Council
-Advanced Grant (ERC-AdG 885504 GHOSTINTHESHELL) awarded to PT.</p>
+Facility and Computer Services Facility for the generous support, and
+Sven Ssykor and Cornelia Maas for help with fly stocks. Steffen Lemke
+and Yu-Chiun Wang for cephalic furrow discussions. Michael Akam for
+drawing BCV’s attention to the cephalic furrow. Juliana Roscito for text
+revisions. AS was supported by funding from the European Union’s Horizon
+2020 Research and Innovation Programme under grant agreement no. 829010
+(PRIME). BCV was supported by an EMBO Long Term Fellowship (ALTF
+74-2018), and by an European Research Council Advanced Grant (ERC-AdG
+885504 GHOSTINTHESHELL) awarded to PT.</p>
 <!--TODO: Ask about MBC, AK, and CDM funding-->
 <h1 id="author-contributions">Author contributions</h1>
 <p>BCV and PT conceived the study. BCV designed the experiments,
