Improve paragraph comparing CF with EFs

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -344,8 +344,8 @@ formation (Figure <a href="#fig:initiator">S1</a>a). Intrigued by this
 puzzling phenotype, we asked whether the formation of this late fold is
 a direct consequence of the absence of the cephalic furrow.</p>
 <!--These differences may be associated with apical myosin activity which is present in *btd* but not in *eve* mutants [@Eritano2020-mi].-->
-<!--TODO: Create video for prd initiator cells {!@fig:vid-initiator-prd}-->
 <!--TODO: Create video for btd initiator cells {!@fig:vid-initiator-btd}-->
+<!--TODO: Create video for prd initiator cells {!@fig:vid-initiator-prd}-->
 <p>The appearance of a late fold was first noted in <em>eve</em>
 mutants<span class="citation" data-cites="Vincent1997-fa"><sup><a
 href="#ref-Vincent1997-fa" role="doc-biblioref">7</a></sup></span>, and
@@ -360,44 +360,65 @@ href="#fig:ectopic">1</a>a,b,c, <a href="#fig:vid-lateral-btd">Video
 1</a>, <a href="#fig:vid-lateral-eve">Video 2</a>). They appear 15 min
 after the cephalic furrow would have formed, when the germ band is
 extended to around 35% of the egg length (Figure <a
-href="#fig:ectopic">1</a>a,c,d, Table <a href="#tbl:gbtime">1</a>). They
-then disappear in about 20 min, faster than the cephalic furrow in wild
-type. Ectopic folds have a wider and often asymmetric cleft, and lack
-wedge-shaped initiators and other stereotypic cell morphologies present
-in the cephalic furrow<span class="citation"
-data-cites="Spencer2015-td"><sup><a href="#ref-Spencer2015-td"
-role="doc-biblioref">6</a></sup></span> (Figure <a
-href="#fig:ectopic">1</a>b, <a href="#fig:vid-profile-btd">Video 3</a>,
-<a href="#fig:vid-profile-eve">Video 4</a>). The position of ectopic
-folds also varies between individual mutant embryos.
-<!--TODO:AB: Quantify variability of ectopic folds (a bit more than fig 1f)-->
-They can form anterior, posterior, or near the site of cephalic furrow
-formation (Figure <a href="#fig:ectopic">1</a>f, Figure <a
+href="#fig:ectopic">1</a>a,c,d, Table <a href="#tbl:gbtime">1</a>), and
+then disappear in about 20 min—faster than the wildtype cephalic furrow.
+Ectopic folds have a wider and often asymmetric cleft compared to the
+cephalic furrow, and lack the typical cell morphologies of the
+invagination, such as the wedge-shaped initiator cells and elongated
+edge cells<span class="citation" data-cites="Spencer2015-td"><sup><a
+href="#ref-Spencer2015-td" role="doc-biblioref">6</a></sup></span>
+(Figure <a href="#fig:ectopic">1</a>b, <a
+href="#fig:vid-profile-btd">Video 3</a>, <a
+href="#fig:vid-profile-eve">Video 4</a>). Unlike the cephalic furrow,
+the position of ectopic folds varies between individual mutant embryos
+as they can form anterior, posterior, or near the wildtype site of
+invagination (Figure <a href="#fig:ectopic">1</a>f, Figure <a
 href="#fig:features">S2</a>b, <a href="#fig:vid-dynamics-btd">Video
-S2</a>, <a href="#fig:vid-variability-btd">Video S3</a>) and show
-different formation kinetics with no obvious trend in angular direction
-over time (Figure <a href="#fig:features">S2</a>d,e). On average,
-ectopic folds have an area 50% smaller and a depth 25% shallower when
-compared to the cephalic furrow (Figure <a href="#fig:ectopic">1</a>g,h,
-Figure <a href="#fig:features">S2</a>c,f). We find that the penetrance
-of the ectopic folding phenotype is high in cephalic furrow mutants
-(&gt;93%).
-<!--TODO:AK: Fix placement of 13% for sibling controls, confusing in the sentence-->
-Nearly every <em>btd</em> and <em>eve</em> homozygote embryos show one
-or more ectopic folds (2.0±1.0 and 1.8±0.6 folds per side, respectively)
-(Figure <a href="#fig:ectopic">1</a>b, Figure <a
-href="#fig:features">S2</a>a), while sibling controls show a low (13%)
-frequency of ectopic folding with an average of 1.1±0.2 (Table <a
+S2</a>, <a href="#fig:vid-variability-btd">Video S3</a>). Finally,
+ectopic folds show more variable kinetics (Figure <a
+href="#fig:features">S2</a>d,e), are 25% shallower (Figure <a
+href="#fig:features">S2</a>f), and occupy an area 50% smaller compared
+to the cephalic furrow (Figure <a href="#fig:ectopic">1</a>g,h,
+Figure <a href="#fig:features">S2</a>c). These differences in morphology
+and dynamics suggest that the cephalic furrow and the ectopic folds form
+via distinct mechanisms.</p>
+<!--with no obvious trend in angular direction over time-->
+<p>We find that the penetrance of the ectopic folding phenotype is high
+in cephalic furrow mutants (&gt;93%), and nearly every <em>btd</em> and
+<em>eve</em> homozygote embryos show one or more ectopic folds per side
+(2.0±1.0 and 1.8±0.6, respectively) (Figure <a
+href="#fig:ectopic">1</a>b, Figure <a href="#fig:features">S2</a>a).</p>
+<p>Ectopic folds, however, are not exclusive of embryos lacking the
+cephalic furrow.</p>
+<p>, while heterozygote sibling controls show a lower number (1.1±0.2)
+and frequency of ectopic folding (13%) (Table <a
 href="#tbl:stats">2</a>). The frequency of ectopic folds in <em>prd</em>
 mutants is lower (43%), while in wildtype embryos it is surprisingly
-high (80%) (Table <a href="#tbl:stats">2</a>).
-<!--TODO:AS: Is there a figure showing ectopic folds in prd and wildtype embryos?-->
-<!--TODO: Add figure for wildtype ectopic folds and include new plot with EF areas-->
-The ectopic folds in <em>prd</em> and wildtype embryos appear at a
-similar time compared to the ectopic folds in <em>btd</em> and
-<em>eve</em> embryos, but they have a significantly smaller folded area
-compared to the ectopic folds in cephalic furrow mutants (Figure <a
-href="#fig:features">S2</a>g–k, Table <a href="#tbl:area">3</a>).
+high (80%) (Table <a href="#tbl:stats">2</a>). The ectopic folds in
+<em>prd</em> and wildtype embryos appear at a similar time compared to
+the ectopic folds in <em>btd</em> and <em>eve</em> embryos, but they
+have a significantly smaller folded area compared to the ectopic folds
+in cephalic furrow mutants (Figure <a href="#fig:features">S2</a>g–k,
+Table <a href="#tbl:area">3</a>).
+<!--TODO:AS: Does it? Could also be that not all gastrulation stresses are buffered by the CF?--></p>
+<p>the ectopic folding phenotype is causally linked to the absence of
+the cephalic furrow in mutant embryos.
+<!--TODO: Revise this last sentence, and probably split it in two.--></p>
+<p>We find that the penetrance of the ectopic folding phenotype is high
+in cephalic furrow mutants (&gt;93%). Nearly every <em>btd</em> and
+<em>eve</em> homozygote embryos show one or more ectopic folds (2.0±1.0
+and 1.8±0.6 folds per side, respectively) (Figure <a
+href="#fig:ectopic">1</a>b, Figure <a href="#fig:features">S2</a>a),
+while heterozygote sibling controls show a lower number (1.1±0.2) and
+frequency of ectopic folding (13%) (Table <a href="#tbl:stats">2</a>).
+The frequency of ectopic folds in <em>prd</em> mutants is lower (43%),
+while in wildtype embryos it is surprisingly high (80%) (Table <a
+href="#tbl:stats">2</a>). The ectopic folds in <em>prd</em> and wildtype
+embryos appear at a similar time compared to the ectopic folds in
+<em>btd</em> and <em>eve</em> embryos, but they have a significantly
+smaller folded area compared to the ectopic folds in cephalic furrow
+mutants (Figure <a href="#fig:features">S2</a>g–k, Table <a
+href="#tbl:area">3</a>).
 <!--TODO:AS: Does it? Could also be that not all gastrulation stresses are buffered by the CF?-->
 The differences in morphology and dynamics between the cephalic furrow
 and ectopic folds suggest that the latter form via different mechanisms,
@@ -406,6 +427,7 @@ of the cephalic furrow in mutant embryos.
 <!--TODO: Revise this last sentence, and probably split it in two.--></p>
 <!--TODO:PT: This is confusing. I know that’s how it is but it is very surprising observation, which you have made because you were looking for it. I think you need to somehow better emphasize the differences between wild-type ectopic folds and the folds in eve and btd because otherwise the conclusion that they are casually linked to the absence of the furrow in the mutants does not seem to hold.-->
 <!--TODO: Emphasize better the differences between wt and mutant EFs. The higher frequency of anterior and posterior folds in wt should not confuse the reader that EF formation is a direct consequence of CF absence. The position and area of folding matters, need to write in a way that it’s clearer. Use the sentence below stating more clearly the difference between the wt and mutant EFs (less frequent and smaller).-->
+<!--TODO:AB: Quantify the variability of ectopic folds a bit more quantitatively (plot it)-->
 <p>The variability in the positioning of ectopic fold formation in
 cephalic furrow mutants, and the less frequent occurrence of smaller
 ectopic folds in <em>prd</em> and wildtype embryos, suggests that they
