--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -349,7 +349,7 @@ a direct consequence of the absence of the cephalic furrow.</p>
 <p>The appearance of a late fold was first noted in <em>eve</em>
 mutants<span class="citation" data-cites="Vincent1997-fa"><sup><a
 href="#ref-Vincent1997-fa" role="doc-biblioref">7</a></sup></span>, and
-was only more recently observed in <em>btd</em> mutants<span
+only more recently observed in <em>btd</em> mutants<span
 class="citation" data-cites="Eritano2020-mi"><sup><a
 href="#ref-Eritano2020-mi" role="doc-biblioref">8</a></sup></span>.
 However, their significance and the mechanisms driving their formation
@@ -379,55 +379,31 @@ ectopic folds show more variable kinetics (Figure <a
 href="#fig:features">S2</a>d,e), are 25% shallower (Figure <a
 href="#fig:features">S2</a>f), and occupy an area 50% smaller compared
 to the cephalic furrow (Figure <a href="#fig:ectopic">1</a>g,h,
-Figure <a href="#fig:features">S2</a>c). These differences in morphology
+Figure <a href="#fig:features">S2</a>c). Such differences in morphology
 and dynamics suggest that the cephalic furrow and the ectopic folds form
 via distinct mechanisms.</p>
-<!--with no obvious trend in angular direction over time-->
-<p>We find that the penetrance of the ectopic folding phenotype is high
-in cephalic furrow mutants (&gt;93%), and nearly every <em>btd</em> and
-<em>eve</em> homozygote embryos show one or more ectopic folds per side
-(2.0±1.0 and 1.8±0.6, respectively) (Figure <a
-href="#fig:ectopic">1</a>b, Figure <a href="#fig:features">S2</a>a).</p>
-<p>Ectopic folds, however, are not exclusive of embryos lacking the
-cephalic furrow.</p>
-<p>, while heterozygote sibling controls show a lower number (1.1±0.2)
-and frequency of ectopic folding (13%) (Table <a
-href="#tbl:stats">2</a>). The frequency of ectopic folds in <em>prd</em>
-mutants is lower (43%), while in wildtype embryos it is surprisingly
-high (80%) (Table <a href="#tbl:stats">2</a>). The ectopic folds in
-<em>prd</em> and wildtype embryos appear at a similar time compared to
-the ectopic folds in <em>btd</em> and <em>eve</em> embryos, but they
-have a significantly smaller folded area compared to the ectopic folds
+<p>To better understand the mechanisms of ectopic folding, we analyzed
+the phenomenon more broadly in our datasets and found that ectopic folds
+may also occur in embryos with a cephalic furrow (i.e. <em>btd</em> or
+<em>eve</em> heterozygotes, <em>prd</em> hetero- or homozygotes, and
+wildtype). These ectopic folds, however, differ from the ectopic folds
+of cephalic mutants in two key aspects. While the frequency of ectopic
+folding is high in cephalic furrow mutants (&gt;93%)—nearly every
+<em>btd</em> and <em>eve</em> homozygote shows one or more ectopic folds
+per embryo side (2.0±1.0 and 1.8±0.6, respectively) (Figure <a
+href="#fig:ectopic">1</a>b, Figure <a href="#fig:features">S2</a>a)—the
+frequency of ectopic folding in the other embryos is lower, ranging
+between 12% (<em>eve</em> heterozygotes) and 80% (wildtype embryos)
+(Table <a href="#tbl:stats">2</a>). In addition, the area of ectopic
+folds in wildtype embryos is 3–4x smaller than the area of ectopic folds
 in cephalic furrow mutants (Figure <a href="#fig:features">S2</a>g–k,
-Table <a href="#tbl:area">3</a>).
-<!--TODO:AS: Does it? Could also be that not all gastrulation stresses are buffered by the CF?--></p>
-<p>the ectopic folding phenotype is causally linked to the absence of
-the cephalic furrow in mutant embryos.
-<!--TODO: Revise this last sentence, and probably split it in two.--></p>
-<p>We find that the penetrance of the ectopic folding phenotype is high
-in cephalic furrow mutants (&gt;93%). Nearly every <em>btd</em> and
-<em>eve</em> homozygote embryos show one or more ectopic folds (2.0±1.0
-and 1.8±0.6 folds per side, respectively) (Figure <a
-href="#fig:ectopic">1</a>b, Figure <a href="#fig:features">S2</a>a),
-while heterozygote sibling controls show a lower number (1.1±0.2) and
-frequency of ectopic folding (13%) (Table <a href="#tbl:stats">2</a>).
-The frequency of ectopic folds in <em>prd</em> mutants is lower (43%),
-while in wildtype embryos it is surprisingly high (80%) (Table <a
-href="#tbl:stats">2</a>). The ectopic folds in <em>prd</em> and wildtype
-embryos appear at a similar time compared to the ectopic folds in
-<em>btd</em> and <em>eve</em> embryos, but they have a significantly
-smaller folded area compared to the ectopic folds in cephalic furrow
-mutants (Figure <a href="#fig:features">S2</a>g–k, Table <a
-href="#tbl:area">3</a>).
-<!--TODO:AS: Does it? Could also be that not all gastrulation stresses are buffered by the CF?-->
-The differences in morphology and dynamics between the cephalic furrow
-and ectopic folds suggest that the latter form via different mechanisms,
-and that the ectopic folding phenotype is causally linked to the absence
-of the cephalic furrow in mutant embryos.
-<!--TODO: Revise this last sentence, and probably split it in two.--></p>
-<!--TODO:PT: This is confusing. I know that’s how it is but it is very surprising observation, which you have made because you were looking for it. I think you need to somehow better emphasize the differences between wild-type ectopic folds and the folds in eve and btd because otherwise the conclusion that they are casually linked to the absence of the furrow in the mutants does not seem to hold.-->
-<!--TODO: Emphasize better the differences between wt and mutant EFs. The higher frequency of anterior and posterior folds in wt should not confuse the reader that EF formation is a direct consequence of CF absence. The position and area of folding matters, need to write in a way that it’s clearer. Use the sentence below stating more clearly the difference between the wt and mutant EFs (less frequent and smaller).-->
-<!--TODO:AB: Quantify the variability of ectopic folds a bit more quantitatively (plot it)-->
+Table <a href="#tbl:area">3</a>). Thus, cephalic furrow mutants have
+more frequent and more prominent ectopic folds compared to wildtype
+embryos. These data provide evidence that the absence of the cephalic
+furrow is causally linked to an increase in the frequency and in the
+magnitude of ectopic folding during <em>Drosophila</em>
+gastrulation.</p>
+<!--TODO:AB: Quantify the variability of ectopic folds in some way (plot it)-->
 <p>The variability in the positioning of ectopic fold formation in
 cephalic furrow mutants, and the less frequent occurrence of smaller
 ectopic folds in <em>prd</em> and wildtype embryos, suggests that they
@@ -2149,7 +2125,7 @@ apical constriction behavior.</figcaption>
 <div id="fig:features" class="fignos">
 <figure>
 <img src="figures/FigS2.jpg" data-tag="S2" style="width:100.0%"
-alt="Figure S2: Differences between ectopic folding and cephalic furrow formation. a, Profile view of a btd mutant embryo showing the presence of two ectopic folds (arrows) forming next to dividing cells (asterisks). b, Distribution of ectopic folds in eve homozygotes (right) and sibling controls (left). c, Folded area of the cephalic furrow and ectopic folds in eve heterozygotes (left) and homozygotes (right). d, Dynamics of cephalic furrow and ectopic fold formation in eve mutants. e, Dynamics, angle directionality, and tortuosity measurements comparing the cephalic furrow and ectopic fold formation. Within the first fifteen minutes after gastrulation, the cephalic furrow exhibits a typical posterior shift on the dorsal side which declines the initial angle of the invagination from 80° to about 60° in relation to the anteroposterior axis. During this period, begins as a straight line and bends showing a correspondent increase in the measured tortuosity values of the furrow outline. In contrast, ectopic folds show no clear trend in the angle directionality or in the tortuosity values. f, Maximum folding depth of the cephalic furrow and ectopic folds in btd and eve mutants. The ectopic folds are generally shallower than the cephalic furrow in both genetic backgrounds. g, Folded area of ectopic folds in wildtype embryos compared to ectopic folds in btd, eve, and prd embryos. h, Lateral views of wildtype and prd embryos exhibiting ectopic folds. i, Cartographic projections showing the folded area in the cephalic furrow and ectopic folds of the embryos in h. j, Comparison of folded area between the cephalic furrow and ectopic folds in different genetic backgrounds. k, Developmental sequence of the wildtype embryo ectopic fold annotated in i. Four cells are temporarily infolded during the mitotic expansion of adjacent cells." />
+alt="Figure S2: Differences between ectopic folding and cephalic furrow formation. a, Profile view of a btd mutant embryo showing the presence of two ectopic folds (arrows) forming next to dividing cells (asterisks). b, Distribution of ectopic folds in eve homozygotes (right) and sibling controls (left). c, Folded area of the cephalic furrow and ectopic folds in eve heterozygotes (left) and homozygotes (right). d, Dynamics of cephalic furrow and ectopic fold formation in eve mutants. e, Dynamics, angle directionality, and tortuosity measurements comparing the cephalic furrow and ectopic fold formation. Within the first fifteen minutes after gastrulation, the cephalic furrow exhibits a typical posterior shift on the dorsal side which declines the initial angle of the invagination from 80° to about 60° in relation to the anteroposterior axis. During this period, begins as a straight line and bends showing a correspondent increase in the measured tortuosity values of the furrow outline. In contrast, ectopic folds show no obvious trend in angular direction tortuosity values over time. f, Maximum folding depth of the cephalic furrow and ectopic folds in btd and eve mutants. The ectopic folds are generally shallower than the cephalic furrow in both genetic backgrounds. g, Folded area of ectopic folds in wildtype embryos compared to ectopic folds in btd, eve, and prd embryos. h, Lateral views of wildtype and prd embryos exhibiting ectopic folds. i, Cartographic projections showing the folded area in the cephalic furrow and ectopic folds of the embryos in h. j, Comparison of folded area between the cephalic furrow and ectopic folds in different genetic backgrounds. k, Developmental sequence of the wildtype embryo ectopic fold annotated in i. Four cells are temporarily infolded during the mitotic expansion of adjacent cells." />
 <figcaption aria-hidden="true"><span>Figure S2:</span> Differences
 between ectopic folding and cephalic furrow formation.
 <strong>a</strong>, Profile view of a <em>btd</em> mutant embryo showing
@@ -2167,8 +2143,8 @@ shift on the dorsal side which declines the initial angle of the
 invagination from 80° to about 60° in relation to the anteroposterior
 axis. During this period, begins as a straight line and bends showing a
 correspondent increase in the measured tortuosity values of the furrow
-outline. In contrast, ectopic folds show no clear trend in the angle
-directionality or in the tortuosity values. <strong>f</strong>, Maximum
+outline. In contrast, ectopic folds show no obvious trend in angular
+direction tortuosity values over time. <strong>f</strong>, Maximum
 folding depth of the cephalic furrow and ectopic folds in <em>btd</em>
 and <em>eve</em> mutants. The ectopic folds are generally shallower than
 the cephalic furrow in both genetic backgrounds. <strong>g</strong>,
